Adding icons, listinners and fixings

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,6 +28,7 @@ android {
 
     defaultConfig {
         minSdkVersion 19
+        multiDexEnabled true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -40,4 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
