--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,8 +16,7 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://maven.google.com' }
-        maven { url 'https://tokbox.bintray.com/maven' }
+        mavenCentral()
     }
 }
 
@@ -37,7 +36,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.opentok.android:opentok-android-sdk:2.19.0'
+    implementation 'com.opentok.android:opentok-android-sdk:2.22.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
